// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Poll should test crete poll component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="h-full flex flex-col"
      >
        <h2
          class="font-bold"
        >
          Would you Rather?
        </h2>
        <div
          class="h-4/5 flex flex-col justify-around items-center"
        >
          <p>
            Create your own poll
          </p>
          <form
            class="h-1/2 flex flex-col justify-between"
          >
            <input
              class="outline-indigo-500 p-3 border-2 border-indigo-500"
              data-testid="firstoption-input"
              name="optionOneText"
              placeholder="first question"
              type="text"
              value=""
            />
            <input
              class="outline-indigo-500 p-3 border-2 border-indigo-500"
              data-testid="secondoption-input"
              name="optionTwoText"
              placeholder="second question"
              type="text"
              value=""
            />
            <button
              class="bg-indigo-500 px-3 py-2 text-slate-200 cursor-pointer"
              data-testid="submit-button"
            >
              Create
            </button>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="h-full flex flex-col"
    >
      <h2
        class="font-bold"
      >
        Would you Rather?
      </h2>
      <div
        class="h-4/5 flex flex-col justify-around items-center"
      >
        <p>
          Create your own poll
        </p>
        <form
          class="h-1/2 flex flex-col justify-between"
        >
          <input
            class="outline-indigo-500 p-3 border-2 border-indigo-500"
            data-testid="firstoption-input"
            name="optionOneText"
            placeholder="first question"
            type="text"
            value=""
          />
          <input
            class="outline-indigo-500 p-3 border-2 border-indigo-500"
            data-testid="secondoption-input"
            name="optionTwoText"
            placeholder="second question"
            type="text"
            value=""
          />
          <button
            class="bg-indigo-500 px-3 py-2 text-slate-200 cursor-pointer"
            data-testid="submit-button"
          >
            Create
          </button>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Login should test login component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col items-center justify-center h-screen"
      >
        <h1
          class="h-1/3 w-4/5 font-bold"
        >
          Employee Polls
        </h1>
        <div
          class="h-2/3"
        >
          <form
            class="flex flex-col h-2/3 justify-between"
          >
            <input
              class="p-2 outline-none border-2 border-indigo-500"
              data-testid="username-input"
              name="username"
              placeholder="employee id"
              type="text"
              value=""
            />
            <input
              class="p-2 outline-none border-2 border-indigo-500"
              data-testid="password-input"
              name="password"
              placeholder="password"
              type="text"
              value=""
            />
            <button
              class="bg-indigo-500 px-1 py-1 text-slate-200"
              data-testid="submit-button"
            >
              Login
            </button>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col items-center justify-center h-screen"
    >
      <h1
        class="h-1/3 w-4/5 font-bold"
      >
        Employee Polls
      </h1>
      <div
        class="h-2/3"
      >
        <form
          class="flex flex-col h-2/3 justify-between"
        >
          <input
            class="p-2 outline-none border-2 border-indigo-500"
            data-testid="username-input"
            name="username"
            placeholder="employee id"
            type="text"
            value=""
          />
          <input
            class="p-2 outline-none border-2 border-indigo-500"
            data-testid="password-input"
            name="password"
            placeholder="password"
            type="text"
            value=""
          />
          <button
            class="bg-indigo-500 px-1 py-1 text-slate-200"
            data-testid="submit-button"
          >
            Login
          </button>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
